# meshlabframework

./: CMakeLists.txt  main.cpp  menu_utils.cpp  menu_utils.h  shaders.qrc  tab_manager.cpp  tab_manager.h
glwidget/: baseglwidget.cpp  baseglwidget.h  cgalglwidget.cpp  cgalglwidget.h
glwidget/shaders/: axis.frag  axis.vert  blinnphong.frag  blinnphong.vert  curvature.frag  curvature.vert  face_picking.frag  flat.frag  flat.vert  line_fragment.glsl  line_vertex.glsl  loop_subdivision.frag  loop_subdivision.vert  picking.frag  picking.vert  square_fragment.glsl  square_vertex.glsl  texture.frag  texture.vert  uv_fragment.glsl  uv_vertex.glsl  wireframe.frag  wireframe.vert
meshutils/: CMakeLists.txt  my_traits.cpp  my_traits.h
tabs/: basic_tab.h  cgal_tab.h  qglviewer_tab.h
